Added a way to blacklist keyword from ID