@@ -22,10 +22,11 @@ public class Config
             builder.push("entities");
             blacklistedEntities = builder.comment("A list of entity ID that are NOT allowed to be captchalogued. If you need to blacklist a Tag, create a datapack swapping: msuportmodi\\tags\\entity_type\\blacklisted.json")
                     .define("blacklistedEntities", new ArrayList<>(Arrays.asList("minecraft:wither", "minecraft:ender_dragon")));
-            blacklistedBlockEntities = builder.comment("A list of block entity ID that are NOT allowed to be captchalogued.  If you need to blacklist a Tag, create a datapack swapping: msuportmodi\\tags\\block_entity_type\\blacklistedblocks.json")
-                    .define("blacklistedBlockEntities", new ArrayList<>(Arrays.asList("minecraft:shulker_box")));
+            blacklistedBlockEntities = builder.comment("A list of block entity ID that are NOT allowed to be captchalogued.")
+                    .define("blacklistedBlockEntities", new ArrayList<>(List.of("lootr")));
             builder.pop();
         }
+        //Arrays.asList("lootr")
     }
 
     public static final ModConfigSpec serverSpec;
